Avance de diseño de REPORTE

--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -23,7 +23,47 @@
   </head>
   
   <body class="claro esri">
+
+
+   
+
+
+
     <section class="report-main">
+
+      <div class="tabs"> 
+        <div class="tab-header"> 
+          <div class="active">
+            <i class="fa fa-code"></i> Code
+          </div>
+          <div>
+            <i class="fa fa-code"></i> Code
+          </div>
+          <div>
+            <i class="fa fa-code"></i> Code
+          </div>
+        </div>
+        <div class="tab-indicador"> 
+        
+        </div>
+        <div class="tab-content"> 
+          <div class="active">
+            <i class="fa fa-code"></i>
+            <h2>Thissssis code</h2>
+            <p>dfsf sdf sdf sdf dsf dsfds fds fds fds fds f dsf dsf dsfds f sad</p>
+          </div>
+          <div>
+            <i class="fa fa-code"></i>
+            <h2>This is ffffffcode</h2>
+            <p>dfsf sdf sdf sdf dsf dsfds fds fds fds fds f dsf dsf dsfds f sad</p>
+          </div>
+          <div>
+            <i class="fa fa-code"></i>
+            <h2>This is hhhhhhhhhhhhcode</h2>
+            <p>dfsf sdf sdf sdf dsf dsfds fds fds fds fds f dsf dsf dsfds f sad</p>
+          </div>
+        </div>
+      </div>
 
       <!-- Sub Title -->
       <div class="report-title">
