Se agrego pestaña vertical

--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -43,7 +43,7 @@
             <i class="fa fa-code"></i> Code
           </div>
         </div>
-        <div class="tab-indicador"> 
+        <div class="tab-indicator"> 
         
         </div>
         <div class="tab-content"> 
