Se agrega popup de advertencia del reporte como recorrido de las lista de capas de reporte y las consultas de todas las capas

--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -26,7 +26,19 @@
 
 
    
-
+    <div class="popup-alert" id="ID_Alert">
+      <div class="popup-message">
+        <div class="popup-text">
+          <!--<img src="./images/message-100.png" width="100">-->
+        </div>
+        <div class="popup-text">
+          <h1>Advertencia</h1>
+          <p>No se tiene seleccionado el <b>Ámbito Político</b>.</p>
+          <p>Ir a <b>SIGRID - CENEPRED</b>:<br>- Seleccionar <b>Ámbito Político</b> en <b>Diagnóstico y Reporte Territorial</b></b></p>
+          
+        </div>
+      </div>
+    </div>
 
 
     <section class="report-main">
