--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -63,10 +63,14 @@
   
         <div class="report-aside report-graphic" >    
           <center>
-          <canvas id="ID_TABLE_Graphic"  height="400"></canvas>
+          <canvas id="ID_TABLE_Graphic"  height="300" width="400"></canvas>
           </center>
         </div>
-        <div class="report-aside report-summary" id="ID_TABLE_Resumen" >
+
+        <div class="report-aside report-summary ">
+          <label class="report-title-resumen">» CUADRO DE RESUMEN</label>
+          <div class=" form-scroll-resumen"  id="ID_TABLE_Resumen" >
+          </div>
         </div>
       </div>
 
@@ -96,7 +100,7 @@
 
       </div>
 
-      <main>
+      <main style="display: none;">
   
         <input id="tab1" type="radio" name="tabs-2" class="tabs" checked>
         <label for="tab1">Variable 01</label>
@@ -181,6 +185,10 @@
   
   <!-- JS -->  
   <script src="https://js.arcgis.com/3.41/"></script>
+  <!--
   <script src="./js/script.js"></script>
   <script src="./js/app.js"></script>
+  -->
+  <script src="./js/script_2.js"></script>
+
 </html>
