Se adiciona titulo del reporte dinamico y las pestalas verticales

--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -23,9 +23,6 @@
   </head>
   
   <body class="claro esri">
-
-
-   
     <div class="popup-alert" id="ID_Alert">
       <div class="popup-message">
         <div class="popup-text">
@@ -35,18 +32,16 @@
           <h1>Advertencia</h1>
           <p>No se tiene seleccionado el <b>Ámbito Político</b>.</p>
           <p>Ir a <b>SIGRID - CENEPRED</b>:<br>- Seleccionar <b>Ámbito Político</b> en <b>Diagnóstico y Reporte Territorial</b></b></p>
-          
         </div>
       </div>
     </div>
 
 
     <section class="report-main">
-
       <!-- Sub Title -->
       <div class="report-title">
-        <h2>
-          <i class="fa fa-file-text" aria-hidden="true"></i>&nbsp; Reporte Estadístico del Distrito de CHURUJA, BONGARA, AMAZONAS
+        <h2 id="ID_ReportTitle">
+          <i class="fa fa-pie-chart" aria-hidden="true"></i>&nbsp; 
         </h2>
       </div>
       <!-- /Sub Title -->
@@ -63,7 +58,7 @@
   
         <div class="report-aside report-graphic" >    
           <center>
-          <canvas id="ID_TABLE_Graphic"  height="300" width="400"></canvas>
+          <canvas id="ID_TABLE_Graphic"  height="280" width="400"></canvas>
           </center>
         </div>
 
