Se adiciona la grilla del detalle del registro de la capa. Se muestra una capa por defecto sinembargo este defecto se puede cambiar en el config de la lista de capas

--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -36,7 +36,6 @@
       </div>
     </div>
 
-
     <section class="report-main">
       <!-- Sub Title -->
       <div class="report-title">
@@ -52,13 +51,11 @@
         <div class="report-aside report-graphic">dsdsd</div>        
       </div>
       /Content -->
-
-
       <div class="report-content">
   
         <div class="report-aside report-graphic" >    
           <center>
-          <canvas id="ID_TABLE_Graphic"  height="280" width="400"></canvas>
+          <canvas id="ID_TABLE_Graphic"  height="275" width="400"></canvas>
           </center>
         </div>
 
@@ -95,6 +92,8 @@
 
       </div>
 
+      <aside class="report-table" id="ID_TableDetail"></aside>
+
       <main style="display: none;">
   
         <input id="tab1" type="radio" name="tabs-2" class="tabs" checked>
@@ -126,8 +125,8 @@
 
 
             
-            <!-- FeatureTable -->
-            <aside class="report-table" id="ID_TableDetail"></aside>
+            <!-- FeatureTable
+            <aside class="report-table" id="ID_TableDetail"></aside>-->
             <!-- /FeatureTable -->
 
             <!-- Pagination -->
@@ -180,10 +179,7 @@
   
   <!-- JS -->  
   <script src="https://js.arcgis.com/3.41/"></script>
-  <!--
-  <script src="./js/script.js"></script>
-  <script src="./js/app.js"></script>
-  -->
+  <!-- <script src="./js/script.js"></script>
+  <script src="./js/app.js"></script> -->
   <script src="./js/script_2.js"></script>
-
 </html>
