REPORTE. Se adiciona animación de carga a la tabla de RESUMEN

--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -54,7 +54,11 @@
         <!-- Cuadro de resumen-->
         <div class="report-aside report-summary ">
           <label class="report-title-resumen">» CUADRO DE RESUMEN</label>
-          <div class=" form-scroll-resumen"  id="ID_TABLE_Resumen" >
+          <!-- Table -->
+          <div class=" form-scroll-resumen"  id="ID_TABLE_Resumen"></div>
+          <!-- Load CSS -->
+          <div class="lds-facebook" id="ID_Load">
+            <div></div><div></div><div></div>
           </div>
         </div>
         <!-- /Cuadro de resumen-->
