Se soluciono el problema de los TABS dinamicos

--- a/CENEPRED/Avance_03/index_2.html
+++ b/CENEPRED/Avance_03/index_2.html
@@ -149,5 +149,6 @@
   </body>  
   <!-- JS -->  
   <script src="https://js.arcgis.com/3.41/"></script>
+  <!--<script src="./js/script_2.js"></script>-->
   <script src="./js/script_3.js"></script>
 </html>
