REPORTE. Se adiciona para los PPRRD, EVALUACIONES DE RIESGO y ZONAS DE RIESGO NO MITIGABLES

--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -42,7 +42,7 @@
       <!-- /Sub Title -->
       <!-- Summary -->
       <button class="accordion">
-        <i class="fa fa-pie-chart"></i>&nbsp;Cuadro de Resumen
+        <i class="fa fa-pie-chart" id="ID_GraphicSummary"></i>&nbsp;Cuadro de Resumen
       </button>
       <div class="panel">
         <!--
