--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -36,13 +36,13 @@
       <!-- Sub Title -->
       <div class="report-title">
         <h2 id="ID_ReportTitle">
-          <i class="fa fa-pie-chart" aria-hidden="true"></i>&nbsp; 
+          <i class="fa fa-line-chart" aria-hidden="true"></i>&nbsp; 
         </h2>
       </div>
       <!-- /Sub Title -->
       <!-- Summary -->
       <button class="accordion">
-        <i class="fa fa-pie-chart" id="ID_GraphicSummary"></i>&nbsp;Cuadro de Resumen
+        <i class="fa fa-pie-chart" id="ID_GraphicSummary"></i>&nbsp;CUADRO DE RESUMEN
       </button>
       <div class="panel">
         <!--
@@ -57,7 +57,7 @@
           </center>
           -->
           <center>
-            <canvas id="ID_TABLE_Graphic"  height="220" width="490" style="margin-top: 10px;"></canvas>
+            <canvas id="ID_TABLE_Graphic"  height="220" width="490" style="margin: 5px 0px"></canvas>
             </center>
         </section>
         <!-- Cuadro de resumen-->
