REPORTE. Se agrega animación de carga de RESUMEN

--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -42,7 +42,7 @@
       <!-- /Sub Title -->
       <!-- Summary -->
       <button class="accordion">
-        <i class="fa fa-pie-chart" id="ID_GraphicSummary"></i>&nbsp;CUADRO DE RESUMEN
+        <span id="ID_GraphicLoad" class="fa fa-refresh fa-spin" style="font-size:12px; margin-right: 10px;"></span> <i class="fa fa-pie-chart" id="ID_GraphicSummary"></i>&nbsp;CUADRO DE RESUMEN
       </button>
       <div class="panel">
         <!--
