EXTRACT DATA. Se integra la descarga de DIAGNOSTICO a REPORTE

--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -103,8 +103,11 @@
       <aside class="report-table" id="ID_TableDetail"></aside>   
       
       <div class="row-excel">
+
+        <div id="ID_Diagnosis_Format"></div>
+
         <button type="button" class="btn-excel" id="ID_BTN_EXCEL">
-          <i class="fa fa-file-excel-o"></i>&nbsp; Descargar
+          <i class="fa fa-cloud-download" style="font-size:18px"></i>&nbsp; Descargar Alfanumérico
         </button>
         <table id="ID_BTN_EXCEL_TB"></table>
       </div>
