REPORTE. Se levanta las observaciones. PARTE 01 - 03

--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -106,7 +106,7 @@
         <div id="ID_Diagnosis_Format"></div>
         <!-- Export Data | XLS -->
         <button type="button" class="btn-excel" id="ID_BTN_EXCEL">
-          <i class="fa fa-cloud-download" style="font-size:18px"></i>&nbsp; Descargar Alfanumérico
+          <i class="fa fa-download"></i>&nbsp; Descargar Tabla
         </button>
         <!-- Export Data | TABLE -->
         <table id="ID_BTN_EXCEL_TB"></table>
