REPORTE. Se levanta las observaciones. PARTE 02 - 03

--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -34,17 +34,19 @@
     </div>    
     <!-- /Alert -->
     <section class="report-main">
-      <!-- Sub Title -->
+      <!-- Sub Title
       <div class="report-title">
         <h2 id="ID_ReportTitle">
           <i class="fa fa-line-chart" aria-hidden="true"></i>&nbsp; 
         </h2>
       </div>
-      <!-- /Sub Title -->
+      /Sub Title -->
       <!-- Summary -->
       <button class="accordion">
-        <span id="ID_GraphicLoad" class="fa fa-refresh fa-spin" style="font-size:12px; margin-right: 10px;"></span> <i class="fa fa-pie-chart" id="ID_GraphicSummary"></i>&nbsp;CUADRO DE RESUMEN
+        <span id="ID_GraphicLoad" class="fa fa-refresh fa-spin" style="font-size:12px; margin-right: 10px;"></span>
+        <span id="ID_ReportTitle" style="margin: 0;"></span>
       </button>
+      <!-- id="ID_GraphicSummary" -->
       <div class="panel">
         <!--
         <div class="lds-facebook" id="ID_CR_Load" style="display: none;">
