--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -4,7 +4,7 @@
     <!-- ICON -->
     <link rel="icon" type="images/png" href="./images/logo.png"/>
     <!-- TITLE -->
-    <title>Reporte | SIGRID - CENEPRED </title>    
+    <title>SIGRID - CENEPRED | Reporte </title>
     <!-- META -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport"           content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
