--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -82,7 +82,11 @@
         <table id="ID_BTN_EXCEL_TB"></table>
         <!-- Load Download -->
         <div class="lds-facebook" id="ID_Load_Download"><div></div><div></div><div></div></div>
-      </div>      
+      </div>  
+      
+      <div class="accordion">
+        
+      </div>
     </section>
     <!-- Map -->
     <section class="map" id="map" style="display: none;"></section>
