--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -4,7 +4,7 @@
     <!-- ICON -->
     <link rel="icon" type="images/png" href="./images/logo.png"/>
     <!-- TITLE -->
-    <title>SIGRID - CENEPRED | Reporte </title>
+    <title>SIGRID | Reporte Estadístico</title>
     <!-- META -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport"           content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -65,7 +65,7 @@
       <aside class="report-table" id="ID_TableDetail"></aside>      
       <div class="row-excel">
         <!-- Export Data | GDB/SHP/KMZ -->
-        <div id="ID_Diagnosis_Format" style="display: none;"></div>
+        <div id="ID_Diagnosis_Format"></div>
         <!-- Export Data | XLS -->
         <button type="button" class="btn-excel" id="ID_BTN_EXCEL">
           <i class="fa fa-download"></i>&nbsp; Descargar Tabla
