--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -74,7 +74,9 @@
         <table id="ID_BTN_EXCEL_TB"></table>
         <!-- Load Download -->
         <div class="lds-ellipsis" id="ID_Load_Download" style="display: none;"><div></div><div></div><div></div><div></div></div>
-        <!--<div class="lds-facebook" id="ID_Load_Download"><div></div><div></div><div></div><div></div></div>-->
+      </div>
+      <div class="credits">
+        <p>Gracias a la asistencia técnica del proyecto <strong>"Apoyo a la implementación de la Política Nacional de Gestión del Riesgo de Desastres y fortalecimiento del SINAGERD”</strong>, implementado por <strong>PNUD</strong> con el financiamiento to de <strong>COSUDE</strong>.</p>
       </div>
       <div class="accordion"></div>
     </section>
