REPORTE. Se elimina duplicación de texto.

--- a/CENEPRED/Avance_03/index.html
+++ b/CENEPRED/Avance_03/index.html
@@ -76,7 +76,7 @@
         <div class="lds-ellipsis" id="ID_Load_Download" style="display: none;"><div></div><div></div><div></div><div></div></div>
       </div>
       <div class="credits">
-        <p>Gracias a la asistencia técnica del proyecto <strong>"Apoyo a la implementación de la Política Nacional de Gestión del Riesgo de Desastres y fortalecimiento del SINAGERD”</strong>, implementado por <strong>PNUD</strong> con el financiamiento to de <strong>COSUDE</strong>.</p>
+        <p>Gracias a la asistencia técnica del proyecto <strong>"Apoyo a la implementación de la Política Nacional de Gestión del Riesgo de Desastres y fortalecimiento del SINAGERD”</strong>, implementado por <strong>PNUD</strong> con el financiamiento de <strong>COSUDE</strong>.</p>
       </div>
       <div class="accordion"></div>
     </section>
